# wgmesh

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
completion/: wgmesh.bash
mesh/: mesh.yaml  peers.yaml  settings.yaml  settings.yaml.example
packaging/arch/: PKGBUILD
packaging/debian/: changelog  control  copyright  install
scripts/: install-bash-completion.sh
src/wgmesh/: build.py  cli.py  fill.py  init.py  models.py  resources.py  validate.py  wg.py  yamlio.py
src/wgmesh/examples/mesh/: mesh.yaml.example  peers.yaml.example
src/wgmesh/generators/: __init__.py  routes.py
src/wgmesh/templates/routes/: keenetic.txt.j2  mikrotik.rsc.j2
